kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kiosk-app"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: kiosk-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "frontend"
              servicePort: 80
